--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -18,11 +18,11 @@
   </div>
 
   <button>
-    Sign up
+   <a href= "/deliverytrackers"> Sign up
   </button>
 </form>
 
-<hr>
+<!--hr>
 
 <p>
   Or, <a href="/user_sign_in">Sign in</a> instead.
