--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,13 @@
   </head>
 
   <body>
-    <%= yield %>
+ <a href="/">Your todo list</a>
+|
+<a href="/edit_user_profile">Edit profile</a>
+|
+<a href="/user_sign_out">Sign out</a>
+<p><%=notice%></p>
+<p><%=alert%></p>
+<%= yield %>
   </body>
 </html>
