--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,6 +8,21 @@
   </head>
 
   <body>
-    <%= yield %>
+  <%if session.fetch(:user_id) == nil%>
+<li>
+<a href="/user_sign_up">Sign up</a>
+|
+<a href="/user_sign_in">Sign in</a>
+</li>
+<%else%>
+<a href="/todos">Your todo list</a>
+|
+<a href="/edit_user_profile">Edit profile</a>
+|
+<a href="/user_sign_out">Sign out</a>
+<%end%>
+<p style ="color:green"><%=notice%></p>
+<p style ="color:red"><%=alert%></p>
+<%= yield %>
   </body>
 </html>
